--- a/index.html
+++ b/index.html
@@ -5,9 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100&display=swap"
+      rel="stylesheet"
+    />
     <title>Full Stack Portfolio</title>
   </head>
   <body>
+    <header></header>
 
+    <main>
+      <form action="submit" class="center-wrapper stack">
+        <h1>Say Hello !!</h1>
+        <div class="name">
+          <label for="name">Your Name</label>
+          <input placeholder="Enter your name" type="text" name="" id="name" />
+        </div>
+
+        <div class="email">
+          <label placeholder="Enter your Email address" for="email"
+            >Your Email</label
+          >
+          <input
+            type="email"
+            id="email"
+            pattern=".+@globex\.com"
+            size="30"
+            required
+          />
+        </div>
+        <h2>Services</h2>
+        <div class="services">
+          <label for="services"></label>
+          <select name="services" id="services">
+            <option value="">Choose Service</option>
+            <option value="Full Vacation">Vacation</option>
+            <option value="Weekend special">Weekend Break</option>
+            <option value="Weekday break">weekday Break</option>
+          </select>
+        </div>
+        <div class="budget">
+          <label for="Budget"></label>
+          <select name="services" id="budget">
+            <option value="">Your Budget</option>
+            <option value="Under $750">Under $750</option>
+            <option value="Midrange under $1000">Under $1000</option>
+            <option value="Dulux under $5000">Under $5000</option>
+          </select>
+        </div>
+        <button id="submit">Submit Booking</button>
+      </form>
+    </main>
+
+    <footer></footer>
   </body>
 </html>
