--- a/index.html
+++ b/index.html
@@ -62,14 +62,16 @@
 
         <div class="grid-auto-rows text-area">
           <label for="text">Message</label>
-          <textarea name="" id="text" cols="10" rows="4">
-Your message here</textarea
-          >
+          <textarea
+            placeholder="Your message here"
+            name=""
+            id="text"
+            cols="10"
+            rows="4"
+          ></textarea>
         </div>
-        <input type="submit" value="Submit" />
+        <input type="submit" value="Submit " />
       </form>
     </main>
-
-    <footer></footer>
   </body>
 </html>
